--- a/src/css/fonts.less
+++ b/src/css/fonts.less
@@ -36,5 +36,14 @@
         url('../../fonts/firasans-semibold-webfont.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
+}
 
+@font-face {
+    font-family: 'slick';
+    font-weight: normal;
+    font-style: normal;
+    src: url('../../fonts/slick.eot');
+    src: url('../../fonts/slick.eot?#iefix') 
+    format('embedded-opentype'), url('../../fonts/slick.woff') 
+    format('woff'), url('../../fonts/slick.ttf') format('truetype');
 }
